[package]
name = "huon"
version = "0.1.0"
edition = "2024"
rust-version = "1.91.1"

[features]
bench = []

[dependencies]
derive_aliases = "0.4.7"
indoc = "2.0.7"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"

[lints.clippy]
"missing_errors_doc" = "allow"
"pedantic" = { level = "warn", priority = -1 }

[dev-dependencies]
pretty_assertions = "1.4.1"
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "parsing"
harness = false

